--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 16px;
+    font-size: 26px;
 }
 
 .container{
-    width: 40vw;
+    width: 20vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -19,28 +19,107 @@ body{
     margin: auto;
 }
 
-.display{
-    height: 4em;
-    width: 100%;
-    border: 1px solid green;
-}
-
-.numpad{
-    width: 100%;
+.calculator {
+    min-height: 45%;
+    max-height: 70%;
+    min-width: 300px;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
 }
 
-.row{
-    width: 100%;
+.display {
+    min-height: calc(1em + 20px);
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
+    overflow: auto;
+    border: 1px solid darkgrey;
+    margin: 5px;
+    padding: 10px;
 }
 
-.button{
+.keyboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: stretch;
+}
+
+.control-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 3px;
+}
+
+.control-buttons button {
+    width: 50%;
+    padding: 15px;
+    margin: 2px;
+    background-color: rgb(245, 190, 108);
+}
+
+#clear {
+    background-color: rgb(228, 135, 59);
+}
+#clear:hover {
+    background-color: rgb(228, 155, 79);
+}
+#clear:active {
+    background-color: rgb(228, 175, 99);
+}
+
+.operators {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 3px;
+}
+
+.operators button {
     width: 25%;
-    height: 50px;
-    /* padding: 10px 30px; */
+    padding: 10px 15px;
+    margin: 2px;
+    background-color: rgb(248, 217, 38);
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 3px;
+}
+
+.row button {
+    width: 33.3%;
+    padding: 10px 15px;
+    margin: 2px;
+}
+
+#equals {
+    background-color: rgb(204, 184, 7);
+}
+#equals:hover {
+    background-color: rgb(204, 204, 27);
+}
+#equals:active {
+    background-color: rgb(204, 224, 47);
+}
+
+button {
+    border: none;
+    border-radius: 0;
+
+}
+
+button:hover {
+    background-color: darkgrey;
+
+}
+
+button:active {
+    background-color: rgb(134, 133, 133);
 }
